--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <link href="css/application.css" rel="stylesheet" type="text/styles">
   </head>
   <body>
-    <div class="container"></div>
+    <div id="app"></div>
   </body>
-  <script src="./bundle.js"></script>
+  <script src="/bundle.js"></script>
 </html>
